--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             const messages = [
                 'прими свою судьбу',
                 '+@#$%^ эло к твоему аккаунту',
-                'fvrxta уже получил твою душу',
+                'fvrxta уже получил уведомление',
                 'твоя душа была отправлена',
                 'транзакция одобрена Сатаной',
                 'ожидайте винстрика',
