--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         
         #soulCounter {
             font-size: 2em;
-            color: gold;
+            color: black;
             font-weight: bold;
-            text-shadow: 0 0 10px rgba(255,215,0,0.5);
+            text-shadow: 0 0 10px rgba(0,0,0,0.5);
         }
     </style>
 </head>
