--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             border-radius: 5px;
         }
 
+        /*
         .counter {
             background: rgba(255,255,255,0.1);
             padding: 20px;
@@ -110,6 +111,7 @@
             font-weight: bold;
             text-shadow: 0 0 10px rgba(0,0,0,0.5);
         }
+        */
     </style>
 </head>
 <body>
@@ -124,25 +126,25 @@
     <main class="content">
         <h2>Сайт для продажи души за эло</h2>
         <p>Нажимая эту кнопку, вы продаете свою душу за эло</p>
+
         
-        <!-- Кнопка-фотография -->
         <div class="image-button-container">
-            <a href="https://t.me/fvrxta/3" class="image-button" onclick="incrementCounter()">
+            <a href="https://t.me/fvrxta/3" class="image-button" /*onclick="incrementCounter()"*/>
                 <img src="https://i.ibb.co/jPsCXPYp/aaa.png" alt="продать душу" class="button-image">
                 <span class="button-text">Продать душу</span>
             </a>
         </div>
-
+<!--
         <div class="counter">
             <h3>Уже продано душ:</h3>
             <span id="soulCounter">0</span>
         </div>
-
+-->
     </main>
     
     <footer>
     </footer>
-
+<!--
     <script>
 
         let count = localStorage.getItem('soulCount') || 0;
@@ -173,5 +175,6 @@
             }
         }
     </script>
+    -->
 </body>
 </html>
